--- a/kinomonster_bootstrap/index.html
+++ b/kinomonster_bootstrap/index.html
@@ -30,7 +30,7 @@
                 <div class="row">
                   
                   <div class="col-lg-12">
-                    <h1><a href="index.html">FructCode</a></h1>
+                    <h1><a href="index.html">FructCode!!!</a></h1>
                     <p>Кино - наша страсть.</p>
                   </div>
 
